--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
@@ -44,7 +43,7 @@ h6 {
   top: 0;
   left: 0;
   pointer-events: none;
-  z-index: 99;
+  z-index: 99999999;
 
 }
 
@@ -1386,17 +1385,8 @@ section {
 #preloader {
   background: #FFFFFF url("../img/preload.gif") no-repeat center;
   background-size: 50%;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   position: fixed;
-  z-index: 999;
-
-}
-
-#preloader image {
-  background-image: url("../img/pre.png") no-repeat center;
-  height: 50vh;
-  width: 80vh;
-  margin-left: 60vh;
-  position: fixed;
+  z-index: 9999;
 }
