Fixed Preloader and improved cursor animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,8 +43,14 @@ h6 {
   top: 0;
   left: 0;
   pointer-events: none;
-  z-index: 99999999;
+  z-index: 99;
 
+}
+
+@media (max-width: 768px) {
+  .circle {
+    display: none;
+  }
 }
 
 
